@@ -1,3 +1,8 @@
+05/23/2004  version 0.2 pre3    Ian Lewis <IanLewis@member.fsf.org>
+
+    * Added a new Reload action to the file menu so that users can reload the
+      current document from disk
+
 05/22/2004  version 0.2 pre2    Ian Lewis <IanLewis@member.fsf.org>
 
     * Fixed a bug that caused non-dirty, non-untitled document to save when
